# security-base

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  reusable-go-security.yml  reusable-py-security.yml  reusable-secret-scan.yml  reusable-ts-security.yml  security-audit-scheduled.yml
configs/: .bandit.yml  .eslintrc.base.json  .golangci.yml
scripts/: apply-security.sh
src/security_base_python/: __init__.py
tests/: test_version.py
tools/sync/: config.go  config.yaml  config_test.go  copier.go  copier_test.go  git.go  git_test.go  github.go  github_test.go  go.mod  go.sum  main.go  sync.go  sync_test.go
